added dockerfile